Hide team 'read more' links on mobile to prevent confusing popup

--- a/source/stylesheets/pages/_landing.scss
+++ b/source/stylesheets/pages/_landing.scss
@@ -105,6 +105,9 @@
   .two-columns.extra-margin {
     margin-top: 0px;
   }
+  .team-read-more {
+    display: none;
+  }
 }
 
 /************************************************************************\
